--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
 .idea/*.*
 
 assignment_1/code/cifar10/cifar-10-batches-py/
+assignment_1/code/cifar10/__pycache__/
+assignment_2/code/cifar10/__pycache__/
