RNN ready for training

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,5 @@
 assignment_1/code/cifar10/cifar-10-batches-py/
 assignment_1/code/cifar10/__pycache__/
 assignment_2/code/cifar10/__pycache__/
+assignment_2/part1/__pycache__/
+assignment_2/part2/__pycache__/
